--- a/config/corne.conf
+++ b/config/corne.conf
@@ -5,13 +5,13 @@
 # Uncomment the following line to enable the Corne OLED Display
 #CONFIG_ZMK_KEYBOARD_NAME"Type Writer"
 CONFIG_ZMK_DISPLAY=y
-CONFIG_ZMK_DISPLAY_INVERT=y
-CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
-CONFIG_ZMK_WIDGET_WPM_STATUS=y
+#CONFIG_ZMK_DISPLAY_INVERT=y
+#CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+#CONFIG_ZMK_WIDGET_WPM_STATUS=y
 CONFIG_ZMK_BACKLIGHT=y
-CONFIG_ZMK_BACKLIGHT_ON_START=y
-CONFIG_ZMK_BACKLIGHT_BRT_STEP=80
-CONFIG_ZMK_BACKLIGHT_BRT_STEP=100
-CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=y
-CONFIG_ZMK_BACKLIGHT_AUTO_OFF_USB=n
-CONFIG_BT_BAS=n
+#CONFIG_ZMK_BACKLIGHT_ON_START=y
+#CONFIG_ZMK_BACKLIGHT_BRT_STEP=80
+#CONFIG_ZMK_BACKLIGHT_BRT_STEP=100
+#CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=y
+#CONFIG_ZMK_BACKLIGHT_AUTO_OFF_USB=n
+#CONFIG_BT_BAS=n
