--- a/config/corne.conf
+++ b/config/corne.conf
@@ -5,9 +5,9 @@
 # Uncomment the following line to enable the Corne OLED Display
 #CONFIG_ZMK_KEYBOARD_NAME"Type Writer"
 CONFIG_ZMK_DISPLAY=y
-#CONFIG_ZMK_DISPLAY_INVERT=y
-#CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
-#CONFIG_ZMK_WIDGET_WPM_STATUS=y
+CONFIG_ZMK_DISPLAY_INVERT=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+CONFIG_ZMK_WIDGET_WPM_STATUS=y
 #CONFIG_ZMK_BACKLIGHT=y
 #CONFIG_ZMK_BACKLIGHT_ON_START=y
 #CONFIG_ZMK_BACKLIGHT_BRT_STEP=80
