--- a/config/corne.conf
+++ b/config/corne.conf
@@ -2,16 +2,18 @@
 # CONFIG_ZMK_RGB_UNDERGLOW=y
 # CONFIG_WS2812_STRIP=y
 
-# Uncomment the following line to enable the Corne OLED Display
 #CONFIG_ZMK_KEYBOARD_NAME"Type Writer"
+# display
 CONFIG_ZMK_DISPLAY=y
-CONFIG_ZMK_DISPLAY_INVERT=y
+#CONFIG_ZMK_DISPLAY_INVERT=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
 CONFIG_ZMK_WIDGET_WPM_STATUS=y
+# back light
 #CONFIG_ZMK_BACKLIGHT=y
 #CONFIG_ZMK_BACKLIGHT_ON_START=y
 #CONFIG_ZMK_BACKLIGHT_BRT_STEP=80
 #CONFIG_ZMK_BACKLIGHT_BRT_STEP=100
 #CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=y
 #CONFIG_ZMK_BACKLIGHT_AUTO_OFF_USB=n
-#CONFIG_BT_BAS=n
+
+CONFIG_BT_BAS=n
