--- a/config/corne.conf
+++ b/config/corne.conf
@@ -11,9 +11,9 @@ CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
 CONFIG_ZMK_WIDGET_WPM_STATUS=y
 
 
-CONFIG_ZMK_RGB_UNDERGLOW=n
-CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_USB=y
-CONFIG_ZMK_RGB_UNDERGLOW_ON_START=n
+#CONFIG_ZMK_RGB_UNDERGLOW=n
+#CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_USB=y
+#CONFIG_ZMK_RGB_UNDERGLOW_ON_START=n
 # back light
 CONFIG_ZMK_BACKLIGHT=y
 CONFIG_ZMK_BACKLIGHT_ON_START=n
