--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,25 +1,61 @@
-# Uncomment the following lines to enable the Corne RGB Underglow
-#CONFIG_ZMK_RGB_UNDERGLOW=y
-#CONFIG_WS2812_STRIP=y
-
 #CONFIG_ZMK_KEYBOARD_NAME"Type Writer"
 
-# display
+#### Power
+CONFIG_ZMK_SLEEP=y # Enable deep sleep support
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
+
+
+# Make Bluetooth stronger
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
+# Disable external power when not connected to USB
+# CONFIG_ZMK_EXT_POWER_USB_ONLY=y
+
+# ######################################################
+## RGB Backlight
+## ZMK doesn't support per-key backlighting. The only lighting code that works with RGB LEDs is the underglow code, hence the suggestion to add your backlight LEDs to be part of underglow
+CONFIG_ZMK_BACKLIGHT=y
+CONFIG_LED_GPIO=y
+CONFIG_ZMK_BACKLIGHT_BRT_STEP=20
+CONFIG_ZMK_BACKLIGHT_BRT_START=40
+CONFIG_ZMK_BACKLIGHT_ON_START=y
+CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=n
+CONFIG_ZMK_BACKLIGHT_AUTO_OFF_USB=n
+
+
+# ######################################################
+## OLED Display
 CONFIG_ZMK_DISPLAY=y
-#CONFIG_ZMK_DISPLAY_INVERT=y
-CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+CONFIG_ZMK_EXT_POWER=y
+CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
+CONFIG_ZMK_WIDGET_LAYER_STATUS=y
 CONFIG_ZMK_WIDGET_WPM_STATUS=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+
+
+# Uncomment these two lines to add support for encoders
+# CONFIG_EC11=y
+# CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+# display
+
+
+#CONFIG_ZMK_DISPLAY=y
+#CONFIG_ZMK_DISPLAY_INVERT=y
+#CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+#CONFIG_ZMK_WIDGET_WPM_STATUS=y
 
 
 #CONFIG_ZMK_RGB_UNDERGLOW=n
 #CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_USB=y
 #CONFIG_ZMK_RGB_UNDERGLOW_ON_START=n
+# CONFIG_WS2812_STRIP=y
 # back light
-CONFIG_ZMK_BACKLIGHT=y
-CONFIG_ZMK_BACKLIGHT_ON_START=n
-CONFIG_ZMK_BACKLIGHT_BRT_STEP=80
-CONFIG_ZMK_BACKLIGHT_BRT_STEP=100
-CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=y
-CONFIG_ZMK_BACKLIGHT_AUTO_OFF_USB=n
+#CONFIG_ZMK_BACKLIGHT=y
+#CONFIG_ZMK_BACKLIGHT_ON_START=n
+#CONFIG_ZMK_BACKLIGHT_BRT_STEP=80
+#CONFIG_ZMK_BACKLIGHT_BRT_STEP=100
+#CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=y
+#CONFIG_ZMK_BACKLIGHT_AUTO_OFF_USB=n
 
 CONFIG_BT_BAS=n
