--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,12 +1,12 @@
 #CONFIG_ZMK_KEYBOARD_NAME"Type Writer"
 
 #### Power
-CONFIG_ZMK_SLEEP=y # Enable deep sleep support
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
+#CONFIG_ZMK_SLEEP=y # Enable deep sleep support
+#CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 
 
 # Make Bluetooth stronger
-CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+#CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
 # Disable external power when not connected to USB
 # CONFIG_ZMK_EXT_POWER_USB_ONLY=y
@@ -14,13 +14,13 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 # ######################################################
 ## RGB Backlight
 ## ZMK doesn't support per-key backlighting. The only lighting code that works with RGB LEDs is the underglow code, hence the suggestion to add your backlight LEDs to be part of underglow
-CONFIG_ZMK_BACKLIGHT=y
-CONFIG_LED_GPIO=y
-CONFIG_ZMK_BACKLIGHT_BRT_STEP=20
-CONFIG_ZMK_BACKLIGHT_BRT_START=40
-CONFIG_ZMK_BACKLIGHT_ON_START=y
-CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=n
-CONFIG_ZMK_BACKLIGHT_AUTO_OFF_USB=n
+#CONFIG_ZMK_BACKLIGHT=y
+#CONFIG_LED_GPIO=y
+#CONFIG_ZMK_BACKLIGHT_BRT_STEP=20
+#CONFIG_ZMK_BACKLIGHT_BRT_START=40
+#CONFIG_ZMK_BACKLIGHT_ON_START=y
+#CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=n
+#CONFIG_ZMK_BACKLIGHT_AUTO_OFF_USB=n
 
 
 # ######################################################
@@ -58,4 +58,4 @@ CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
 #CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=y
 #CONFIG_ZMK_BACKLIGHT_AUTO_OFF_USB=n
 
-CONFIG_BT_BAS=n
+#CONFIG_BT_BAS=n
