--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,8 +1,8 @@
 #CONFIG_ZMK_KEYBOARD_NAME"Type Writer"
 
 #### Power
-#CONFIG_ZMK_SLEEP=y # Enable deep sleep support
-#CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
+CONFIG_ZMK_SLEEP=y # Enable deep sleep support
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 
 
 # Make Bluetooth stronger
@@ -34,9 +34,6 @@ CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
 
 
-# Uncomment these two lines to add support for encoders
-# CONFIG_EC11=y
-# CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 # display
 
 
