--- a/config/corne.conf
+++ b/config/corne.conf
@@ -6,10 +6,10 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 
 
 # Make Bluetooth stronger
-#CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
 # Disable external power when not connected to USB
-# CONFIG_ZMK_EXT_POWER_USB_ONLY=y
+ CONFIG_ZMK_EXT_POWER_USB_ONLY=y
 
 # ######################################################
 ## RGB Backlight
@@ -33,15 +33,10 @@ CONFIG_ZMK_WIDGET_WPM_STATUS=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
 
-
-# display
-
-
 #CONFIG_ZMK_DISPLAY=y
 #CONFIG_ZMK_DISPLAY_INVERT=y
 #CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
 #CONFIG_ZMK_WIDGET_WPM_STATUS=y
-
 
 #CONFIG_ZMK_RGB_UNDERGLOW=n
 #CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_USB=y
