--- a/build.yaml
+++ b/build.yaml
@@ -19,7 +19,7 @@
 #
 ---
 include:
-  - board: glider
+  - board: nice_nano_v2
     shield: corne_left
-  - board: glider
+  - board: nice_nano_v2
     shield: corne_right
