--- a/config/corne.conf
+++ b/config/corne.conf
@@ -14,8 +14,10 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 # ######################################################
 ## RGB Backlight
 ## ZMK doesn't support per-key backlighting. The only lighting code that works with RGB LEDs is the underglow code, hence the suggestion to add your backlight LEDs to be part of underglow
-#CONFIG_ZMK_BACKLIGHT=y
-#CONFIG_LED_GPIO=y
+CONFIG_ZMK_BACKLIGHT=y
+CONFIG_LED_GPIO=y
+CONFIG_PWM=y
+CONFIG_PWN_INIT_PRIORITY=60
 #CONFIG_ZMK_BACKLIGHT_BRT_STEP=20
 #CONFIG_ZMK_BACKLIGHT_BRT_START=40
 #CONFIG_ZMK_BACKLIGHT_ON_START=y
