--- a/config/corne.conf
+++ b/config/corne.conf
@@ -16,6 +16,7 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 ## ZMK doesn't support per-key backlighting. The only lighting code that works with RGB LEDs is the underglow code, hence the suggestion to add your backlight LEDs to be part of underglow
 CONFIG_ZMK_BACKLIGHT=y
 CONFIG_LED_GPIO=y
+CONFIG_ZMK_BACKLIGHT_PWM=y
 #CONFIG_ZMK_BACKLIGHT_BRT_STEP=20
 #CONFIG_ZMK_BACKLIGHT_BRT_START=40
 #CONFIG_ZMK_BACKLIGHT_ON_START=y
@@ -65,12 +66,3 @@ CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
 # on and off. This also causes the display to turn off.
 #CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 
-# back light
-#CONFIG_ZMK_BACKLIGHT=y
-#CONFIG_ZMK_BACKLIGHT_ON_START=n
-#CONFIG_ZMK_BACKLIGHT_BRT_STEP=80
-#CONFIG_ZMK_BACKLIGHT_BRT_STEP=100
-#CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=y
-#CONFIG_ZMK_BACKLIGHT_AUTO_OFF_USB=n
-
-#CONFIG_BT_BAS=n
