--- a/config/corne.conf
+++ b/config/corne.conf
@@ -39,7 +39,7 @@ CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
 
 # Uncomment the following lines to enable the Corne RGB Underglow
 CONFIG_ZMK_RGB_UNDERGLOW=y
-CONFIG_WS2812_STRIP=n
+CONFIG_WS2812_STRIP=y
 
 # 0	Solid color    1 Breathe     2	Spectrum     3	Swirl
 CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=2
